--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,9 @@
 <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/entypo.css" media="all">
 
+<!-- code highlighter -->
+<link rel="stylesheet" href="{{ site.url }}/assets/css/pygments.css">
+
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/i.css">
 
