--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,6 +8,11 @@
 <link href="//fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="{{ site.url }}/assets/css/entypo.css" media="all">
 
+<!-- reponsiveness -->
+<meta name="HandheldFriendly" content="True">
+<meta name="MobileOptimized" content="320">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <!-- code highlighter -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/pygments.css">
 
