--- a/_includes/ga.html
+++ b/_includes/ga.html
@@ -1,4 +1,12 @@
 <script>
+
+var load;
+
+function delayGA() {
+    load = setTimeout(appendGA, 1000);
+}
+
+function appendGA() {
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -6,6 +14,9 @@
 
   ga('create', 'UA-61204605-1', 'auto');
   ga('send', 'pageview');
+}
+
+delayGA()
 
 
 </script>
