extend with qa and design collections

--- a/_layouts/functions_list.html
+++ b/_layouts/functions_list.html
@@ -13,15 +13,13 @@
           
 
               <ol class="post-list">
-         				  {% for item in site.data.functions %}
-                  <li>
+         		<li>
                     <div class="deets">
-                        <h2><a href="{{ item.name }}.html">{{ item.name }}</a></h2>
-                        <p class="">{{ item.desc }}</p>
+                        <h2><a href="array_map.html">array_map</a></h2>
+                        <p class="">Sends each value of an array to a user-made function, and returns a new one, based on user-made function return expession</p>
                     </div>
                   </li>
-                  {% endfor %}
-              </ol>
+                </ol>
           </article>
         </section>
 
